--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "log-tooles",
   "publisher": "yook-w",
   "displayName": "log-tooles 工具集",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "icon": "icon.png",
   "engines": {
     "vscode": "^1.85.0"
@@ -21,7 +21,7 @@
     }],
     "keybindings": [{
       "command": "extension.logSelectedText",
-      "key": "ctrl+shift+l",
+      "key": "ctrl+shift+L",
       "mac": "cmd+shift+L",
       "when": "editorTextFocus"
     }]
