--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publisher": "yook-w",
   "displayName": "log-tooles 工具集",
   "version": "0.0.8",
-  "icon": "./assets/icon.png",
+  "icon": "images/icon.png",
   "engines": {
     "vscode": "^1.85.0"
   },
